salasõna muutmine töötab korrektselt. parandasin ka handlerite faili kirjutamise viisi